<resources>
    <string name="app_name">RecipesApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fab_description_txt">Add</string>
    <string name="text_recipe">Recipes</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="dessert">Dessert</string>
    <string name="drink">Drink</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="snack">Snack</string>
    <string name="side_dish">Side Dish</string>
    <string name="soup">Soup</string>
    <string name="sauce">Sauce</string>
    <string name="appetizer">Appetizer</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">Fingerfood</string>
    <string name="beverage">Beverage</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="vegan">Vegan</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="paleo">Paleo</string>
    <string name="diet_type">Diet Type</string>
    <string name="finger_food">Finger Food</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="description">Description</string>
    <string name="cheap">Cheap</string>
    <string name="diary_free">Diary Free</string>
    <string name="healthy">Healthy</string>
    <string name="title">Title</string>
    <string name="no_favourite_recipes">No Favourite Recipes</string>
</resources>